...
    <string name="gpodnet_summary">Synchronize with other devices</string>
    <string name="gpodnet_auth_label">gpodder.net Login</string>
    <string name="free_space_label">%1$s free</string>
    <string name="episode_cache_full_title">Episode cache full</string>
    <string name="episode_cache_full_message">The episode cache limit has been reached. You can increase the cache size in the Settings.</string>
    <string name="synchronizing">Synchronizing…</string>
    <string name="discovery_page_label">Discovery Page</string>
    <string name="profile_page_label">Profile Page</string>

    <!-- Statistics fragment -->
    <string name="total_time_listened_to_podcasts">Total time of podcasts played:</string>
    <string name="statistics_details_dialog">%1$d out of %2$d episodes started.\n\nPlayed %3$s out of %4$s.</string>
    <string name="statistics_mode">Statistics mode</string>
...
    <string name="search_hint">Search for episodes</string>
    <string name="found_in_shownotes_label">Found in show notes</string>
    <string name="found_in_chapters_label">Found in chapters</string>
    <string name="found_in_authors_label">Found in author(s)</string>
    <string name="found_in_feeds_label">Found in podcast</string>
    <string name="search_status_no_results">No results were found</string>
    <string name="search_label">Search</string>
    <string name="found_in_title_label">Found in title</string>
    <string name="no_results_for_query">No results were found for \"%1$s\"</string>

    <!-- OPML import and export -->
    <string name="opml_import_txtv_button_lable">OPML files allow you to move your podcasts from one podcatcher to another.</string>
    <string name="opml_import_option">Option %1$d</string>
...
