<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/playerFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            tools:layout_height="64dp"
            tools:background="@android:color/holo_green_light" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            tools:background="@android:color/holo_blue_dark" />

        <View
            android:id="@+id/shadow"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_below="@id/toolbar"
            android:background="@drawable/shadow" />

        <FrameLayout
            android:id="@+id/main_view"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_above="@id/playerFragment"
            android:layout_below="@id/toolbar"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="-2dp"
            android:foreground="?android:windowContentOverlay"
            tools:background="@android:color/holo_red_dark" />

    </RelativeLayout>

    <include layout="@layout/nav_list" />

</android.support.v4.widget.DrawerLayout>