<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:custom="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/filter_items"
        android:icon="?attr/ic_filter"
        android:menuCategory="container"
        android:title="@string/filter"
        custom:showAsAction="always">
    </item>
    <item
        android:id="@+id/episode_actions"
        android:menuCategory="container"
        android:icon="?attr/checkbox_multiple"
        android:title="@string/batch_edit"
        custom:showAsAction="always">
    </item>
    <item
        android:id="@+id/refresh_item"
        android:icon="?attr/navigation_refresh"
        android:menuCategory="container"
        android:title="@string/refresh_label"
        custom:showAsAction="always">
    </item>
    <item
        android:id="@+id/refresh_complete_item"
        android:menuCategory="container"
        android:title="@string/load_complete_feed"
        custom:showAsAction="collapseActionView">
    </item>

    <item
        android:id="@+id/action_search"
        android:icon="?attr/action_search"
        custom:showAsAction="always"
        custom:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/search_label"/>

    <item
        android:id="@+id/support_item"
        android:menuCategory="container"
        android:title="@string/support_label"
        android:visible="false"
        custom:showAsAction="collapseActionView">
    </item>

    <item
        android:id="@+id/visit_website_item"
        android:icon="?attr/location_web_site"
        android:menuCategory="container"
        custom:showAsAction="collapseActionView"
        android:title="@string/visit_website_label"
        android:visible="true">
    </item>
    <item
        android:id="@+id/share_link_item"
        android:menuCategory="container"
        custom:showAsAction="collapseActionView"
        android:title="@string/share_link_label">
    </item>
    <item
        android:id="@+id/share_download_url_item"
        android:menuCategory="container"
        custom:showAsAction="collapseActionView"
        android:title="@string/share_feed_url_label">
    </item>

    <item
        android:id="@+id/rename_item"
        android:menuCategory="container"
        android:title="@string/rename_feed_label"
        custom:showAsAction="never" />
    <item
        android:id="@+id/add_to_favorites_podcasts"
        android:menuCategory="container"
        android:title="@string/add_to_favorite_podcast" />
    <item
        android:id="@+id/remove_from_favorite_podcasts"
        android:menuCategory="container"
        android:title="@string/remove_from_favorite_podcast" />
    <item
        android:id="@+id/remove_item"
        android:icon="?attr/content_discard"
        android:menuCategory="container"
        android:title="@string/remove_feed_label"
        android:visible="true"
        custom:showAsAction="collapseActionView">
    </item>


</menu>