<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.danoeh.antennapod.fragment.SubscriptionFavoritePodcastsFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->


    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:tabGravity="fill"
        app:tabMode="fixed"
        android:background="@color/antennapod_blue"
        app:tabIndicatorColor="@color/red"
        app:tabSelectedTextColor="@color/vpi__bright_foreground_inverse_holo_light"
        app:tabIndicatorHeight="1dp"
        android:id="@+id/subscriptionfavoritepodcasts_tablayout_id"/>

    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/subscriptionfavoritepodcasts_viewpager_id"></android.support.v4.view.ViewPager>



</LinearLayout>
